Corrected overflow of elements.

--- a/src/assets/css/backend.css
+++ b/src/assets/css/backend.css
@@ -635,6 +635,7 @@ body .form-horizontal .controls {
 #users-page #providers .details-view,
 #users-page #providers .working-plan-view {
     clear: both;
+    overflow: auto;
 }
 
 #users-page #providers .working-plan-view .work-start,
